# ImHex-Zlib-Plugin

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: ImHexExternalPlugin.cmake
source/: plugin_zlib.cpp
